--- a/thanks-fes-web/src/app/components/pages/question/question.component.html
+++ b/thanks-fes-web/src/app/components/pages/question/question.component.html
@@ -279,7 +279,7 @@
               step === '総合個人成績'
             "
             class="second-label"
-            >{{ result.elapsedSecond.toFixed(2) }}</span
+            >{{ result.elapsedSecond.toFixed(2) }}秒</span
           >
         </div>
       </div>
