--- a/thanks-fes-web/src/app/components/pages/question/question.component.scss
+++ b/thanks-fes-web/src/app/components/pages/question/question.component.scss
@@ -26,7 +26,8 @@ $yellow-highlight: #fffc4b;
 
 #thanks-fes-title,
 #total-team-ranking-title,
-#total-panelist-ranking-title {
+#total-panelist-ranking-title,
+#award-prize-title {
   transform: translate(100px, 150px) scale(0);
   transition: transform 1s;
 
