--- a/thanks-fes-web/src/app/components/pages/question/question.component.scss
+++ b/thanks-fes-web/src/app/components/pages/question/question.component.scss
@@ -133,6 +133,7 @@ $yellow-highlight: #fffc4b;
 
 .period-guide-glass {
   max-width: 90vw;
+  min-width: 75vw;
   margin-top: 5vh;
   @extend .glass;
   padding: 8px;
