--- a/thanks-fes-web/src/app/components/pages/question/question.component.html
+++ b/thanks-fes-web/src/app/components/pages/question/question.component.html
@@ -232,13 +232,13 @@
   <img
     *ngIf="step === '提供'"
     id="sponsor-title"
-    src="/assets/images/sponsor-title.png"
+    src="/assets/images/sponsor.png"
   />
 
   <img
     *ngIf="step === 'エンディング'"
     id="ending-title"
-    src="/assets/images/sponsor-title.png"
+    src="/assets/images/ending.png"
   />
 
   <ng-container
