--- a/thanks-fes-web/src/app/components/pages/panelist/panelist.component.html
+++ b/thanks-fes-web/src/app/components/pages/panelist/panelist.component.html
@@ -155,10 +155,10 @@
             step === '総合個人ランキング'
           ? '/assets/images/total-panelist-ranking-title.png'
           : step === '景品発表'
-          ? 'award-prize.png'
+          ? '/assets/images/award-prize-title.png'
           : step === '提供'
-          ? 'sponsor.png'
-          : 'ending.png'
+          ? '/assets/images/sponsor.png'
+          : '/assets/images/ending.png'
       "
     />
   </ng-container>
