--- a/thanks-fes-web/src/app/components/pages/admin/admin.component.html
+++ b/thanks-fes-web/src/app/components/pages/admin/admin.component.html
@@ -36,9 +36,9 @@
       class="admin-button"
       [height]="50"
       [disabled]="!step"
-      (emitClick)="clearAnswers()"
+      (emitClick)="backToInit()"
     >
-      回答を全てクリア
+      初めに戻る
     </fes-button>
     <fes-button
       class="admin-button"
